force-app/main/default/objects/Feedback__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional_Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>