force-app/main/default/objects/Feedback__c/fields/Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Advocacy__c</fullName>
    <label>Advocacy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>