force-app/main/default/objects/Feedback__c/fields/Advocacy_Rating__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Rating__c</fullName>
    <label>Advocacy (Rating)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>