force-app/main/default/objects/Feedback__c/fields/Describe_the_Nominee_with_an_example__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_Nominee_with_an_example__c</fullName>
    <label>Describe the Nominee with an example</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>