force-app/main/default/objects/Feedback__c/fields/Do_you_have_any_concerns__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_concerns__c</fullName>
    <label>Do you have any concerns</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>