force-app/main/default/objects/Feedback__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>