force-app/main/default/objects/Feedback__c/fields/Generosity__c.field-meta.xml
<CustomField>
    <fullName>Generosity__c</fullName>
    <label>Generosity</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>