force-app/main/default/objects/Feedback__c/fields/Generosity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Generosity_Rating__c</fullName>
    <label>Generosity (Rating)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>