force-app/main/default/objects/Feedback__c/fields/How_do_you_know_the_Nominee__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_know_the_Nominee__c</fullName>
    <label>How do you know the Nominee?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>