force-app/main/default/objects/Feedback__c/fields/Leadership__c.field-meta.xml
<CustomField>
    <fullName>Leadership__c</fullName>
    <label>Leadership</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>