force-app/main/default/objects/Feedback__c/fields/Leadership_Rating__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Rating__c</fullName>
    <label>Leadership (Rating)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>