force-app/main/default/objects/Feedback__c/fields/Personally_mean_to_be_MVP__c.field-meta.xml
<CustomField>
    <fullName>Personally_mean_to_be_MVP__c</fullName>
    <label>Personally mean to be MVP</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>