force-app/main/default/objects/Feedback__c/fields/Please_describe_how_you_know__c.field-meta.xml
<CustomField>
    <fullName>Please_describe_how_you_know__c</fullName>
    <label>Describe the Nominee with an example</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>