force-app/main/default/objects/Feedback__c/fields/Should_you_be_renewed__c.field-meta.xml
<CustomField>
    <fullName>Should_you_be_renewed__c</fullName>
    <label>Should you be renewed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>