force-app/main/default/objects/Feedback__c/recordTypes/Nomination.recordType-meta.xml
<RecordType>
    <fullName>Nomination</fullName>
    <active>true</active>
    <label>Nomination</label>
</RecordType>