force-app/main/default/objects/Feedback__c/recordTypes/Self_feedback.recordType-meta.xml
<RecordType>
    <fullName>Self_feedback</fullName>
    <active>true</active>
    <label>Self-feedback</label>
</RecordType>